fix: 修复 GitHub Actions 配置 - 使用 echo 替代 HEREDOC
- 拆分配置文件创建为单独的步骤
- 使用 echo 命令逐行写入配置
- 避免 HEREDOC 导致的 YAML 解析错误
- 更清晰和稳定的配置方式

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -23,21 +23,15 @@ jobs:
           hugo-version: '0.157.0'
           extended: true
 
+      - name: Create config.toml
+        run: |
+          echo "baseURL = 'https://qqqzhch.github.io/zoe-blog/'" > config.toml
+          echo "languageCode = 'zh-CN'" >> config.toml
+          echo "title = 'Zoe Blog'" >> config.toml
+
       - name: Build Hugo site
         run: |
-          # 创建 config.toml（如果不存在）
-          if [ ! -f config.toml ]; then
-            cat > config.toml << 'EOF'
-baseURL = 'https://qqqzhch.github.io/zoe-blog/'
-languageCode = 'zh-CN'
-title = 'Zoe Blog'
-EOF
-          fi
-          
-          # 确保 content 目录存在
           mkdir -p content/posts
-          
-          # 运行 Hugo
           hugo --minify
 
       - name: Deploy to GitHub Pages
