fix: 修复 Hugo 输出配置 - 生成 HTML 而非 XML
- 添加 disableKinds 配置
- 禁用 taxonomy 和 taxonomyTerm 输出
- 确保 Hugo 生成 HTML 页面
- 修复默认页面为 index.xml 的问题

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -28,6 +28,7 @@ jobs:
           echo "baseURL = 'https://qqqzhch.github.io/zoe-blog/'" > config.toml
           echo "languageCode = 'zh-CN'" >> config.toml
           echo "title = 'Zoe Blog'" >> config.toml
+          echo "disableKinds = ['taxonomy', 'taxonomyTerm']" >> config.toml
 
       - name: Build Hugo site
         run: |
