fix: 修复配置 - 移除 force_orphan 和其他可能导致空站点的设置
- 移除 force_orphan 参数
- 移除 --cleanDestinationDir 参数
- 使用标准 Hugo 配置
- 确保生成正常的 HTML 站点

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -28,17 +28,16 @@ jobs:
           echo "baseURL = 'https://qqqzhch.github.io/zoe-blog/'" > config.toml
           echo "languageCode = 'zh-CN'" >> config.toml
           echo "title = 'Zoe Blog'" >> config.toml
-          echo "disableKinds = ['taxonomy', 'taxonomyTerm', 'RSS']" >> config.toml
-          echo "disableLiveReload = true" >> config.toml
 
       - name: Build Hugo site
         run: |
           mkdir -p content/posts
-          hugo --minify --cleanDestinationDir
+          hugo --minify
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          force_orphan: true
+
+
+- name: Deploy to GitHub Pages
+  uses: peaceiris/actions-gh-pages@v3
+  with:
+    github_token: ${{ secrets.GITHUB_TOKEN }}
+    publish_dir: ./public
